# papers

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build.yaml  changelog.yaml  lean.yaml  pages.yaml  pr-hygiene.yaml  python.yaml  shellcheck.yaml  site-assets.yaml
2026-07-02-authenticated-data-structures/: AGENTS.md  Makefile  PLAN.md  README.md  main.tex  references.bib
2026-07-02-authenticated-data-structures/code/: Makefile  README.md  pyproject.toml
2026-07-02-authenticated-data-structures/code/src/ads/: __init__.py  __main__.py  merkle.py
2026-07-02-authenticated-data-structures/code/tests/: test_merkle.py
2026-07-02-authenticated-data-structures/lean/: Ads.lean  Main.lean  Makefile  README.md  lake-manifest.json  lakefile.toml
2026-07-02-authenticated-data-structures/notes/: accumulators-background.md  bonneau-chen-christ-karantaidou-mmr-optimal.md  bowe-miers-2025-a-note-on-notes.md  certificate-transparency-production.md  color-model-reformulation.md  crosby-wallach-2009-tamper-evident-logging.md  dahlberg-pulls-peeters-2016-sparse-merkle-trees.md  grin-mmr-documentation.md  huffman-merkle-tree-hmt.md  jakobsson-leighton-micali-szydlo-2003-fractal-traversal.md  orchard-book-commitment-tree.md  rfc-6962-certificate-transparency.md  shardtree-crate.md  synthesis-witness-maintenance.md  szydlo-2004-merkle-tree-traversal.md  tachyon-zcash-shielded-protocol.md  tamassia-2003-authenticated-data-structures.md  todd-merkle-mountain-ranges.md  (+3 more)
tools/: build_site.py
(+9 files in other folders)
