[project]
name = "ads"
version = "0.1.0"
description = "Merkle-tree authenticated append-only log (reference implementation)"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Danny Willems", email = "danny@badaas.be" }]
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.15.21", "mypy>=1.19", "pytest>=9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/ads/", "tests/", "README.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
include = ["src/ads/"]

[tool.hatch.build.targets.wheel.sources]
"src/ads" = "ads"

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
files = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
